# tenma_ps

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint-and-test.yml  publish-release-build.yml
docs/: src_manual.md
scripts/: run_pytests_with_report.bat  venv_setup.bat
src/python_project_template/: app.py
src/tenma_ps/: power_supply.py  ps_fastapi.py  ps_gui.py
tests/: test_my_package.py
